.provarCaches/00D410000011HE0EAM/objects/rstk__rtwctrshopcal__c.object
<CustomObject>
    <description>rtwctrshopcal__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__rtwctrshopcal_wctr__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstk__rtwctrshopcal_date__c)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_activeind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates whether this Work Center Shop Calendar is Active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_date__c</fullName>
        <inlineHelpText>This is set to the Date from the Divisional Shop Calendar.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Division associated with this WC Calendar</inlineHelpText>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>WC Shop Calendars</relationshipLabel>
        <relationshipName>WC_Shop_Calendars</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_hrsperdaylab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>These are the Labor Hours available, per day, for this Work Center - must be no greater than 24</inlineHelpText>
        <label>Hours Per Day (Labor)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_hrsperdaymach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>These are the Machine Hours available, per day, for this Work Center</inlineHelpText>
        <label>Hours Per Day (Machine)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_labhrsdayconv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total labor capacity hours for this Work Center</inlineHelpText>
        <label>Capacity/Day, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_labhrsload__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>These are the total Labor Hours loaded for Work Orders at this Work Center</inlineHelpText>
        <label>Labor Hours Loaded</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_labhrsloaded__c</fullName>
        <inlineHelpText>Total Labor Hours loaded for this Work Center.</inlineHelpText>
        <label>Labor Hours Loaded Rollup</label>
        <summarizedField>rstk__wopschdate__c.rstk__wopschdate_labhrsload__c</summarizedField>
        <summaryForeignKey>rstk__wopschdate__c.rstk__wopschdate_shopcal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_labovrind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates that the Machine Hours available (from Divisional Shop calendar) have been overridden</inlineHelpText>
        <label>Labor Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_machhrload__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>These are the total Machine Hours loaded for Work Orders at this Work Center</inlineHelpText>
        <label>Machine Hours Loaded</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_machhrloaded__c</fullName>
        <inlineHelpText>Total Machine Hours loaded for this Work Center.</inlineHelpText>
        <label>Machine Hours Loaded Rollup</label>
        <summarizedField>rstk__wopschdate__c.rstk__wopschdate_machhrsload__c</summarizedField>
        <summaryForeignKey>rstk__wopschdate__c.rstk__wopschdate_shopcal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_machhrsdayconv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total labor capacity hours for this Work Center</inlineHelpText>
        <label>Capacity/Day, Machine</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_machovrind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates that the Machine Hours available (from Divisional Shop calendar) have been overridden</inlineHelpText>
        <label>Machine Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_reserveind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a work center where capacity can be reserved  and work order operations can be anchored.</inlineHelpText>
        <label>Reserved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_shopcal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the identification for this Division&apos;s Shop Calendar</inlineHelpText>
        <label>Division Shop Calendar</label>
        <referenceTo>rstk__shopcal__c</referenceTo>
        <relationshipLabel>WC Shop Calendars</relationshipLabel>
        <relationshipName>WC_Shop_Calendars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctrshopcal_wctr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Work Center  associated with this WC Calendar</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>WC Shop Calendars</relationshipLabel>
        <relationshipName>WC_Shop_Calendars</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>WC Shop Calendar</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__WC_Calendar_Select</fullName>
        <columns>NAME</columns>
        <columns>rstk__rtwctrshopcal_div__c</columns>
        <columns>rstk__rtwctrshopcal_shopcal__c</columns>
        <columns>rstk__rtwctrshopcal_wctr__c</columns>
        <columns>rstk__rtwctrshopcal_date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__rtwctrshopcal_labhrsload__c</columns>
        <columns>rstk__rtwctrshopcal_labovrind__c</columns>
        <columns>rstk__rtwctrshopcal_machovrind__c</columns>
        <columns>rstk__rtwctrshopcal_machhrload__c</columns>
        <columns>rstk__rtwctrshopcal_hrsperdaylab__c</columns>
        <columns>rstk__rtwctrshopcal_hrsperdaymach__c</columns>
        <columns>rstk__rtwctrshopcal_labhrsdayconv__c</columns>
        <columns>rstk__rtwctrshopcal_machhrsdayconv__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__rtwctrshopcal_div__c</field>
            <operation>contains</operation>
            <value>colo</value>
        </filters>
        <filters>
            <field>rstk__rtwctrshopcal_date__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2021</value>
        </filters>
        <filters>
            <field>rstk__rtwctrshopcal_date__c</field>
            <operation>lessOrEqual</operation>
            <value>6/30/2021</value>
        </filters>
        <label>WC Calendar - Select</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WC Shop Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>